syntax = "proto3";
package sapienscosmos.ibb.ibb;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
// this line is used by starport scaffolding # 1
import "ibb/pool.proto";

option go_package = "github.com/sapiens-cosmos/ibb/x/ibb/types";

// Query defines the gRPC querier service.
service Query {
    // this line is used by starport scaffolding # 2

	// Queries a pool by id.
	rpc Pool(QueryGetPoolRequest) returns (QueryGetPoolResponse) {
		option (google.api.http).get = "/sapiens-cosmos/ibb/ibb/pool/{id}";
	}

	// Queries a list of pool items.
	rpc PoolAll(QueryAllPoolRequest) returns (QueryAllPoolResponse) {
		option (google.api.http).get = "/sapiens-cosmos/ibb/ibb/pool";
	}

}

// this line is used by starport scaffolding # 3
message QueryGetPoolRequest {
	uint64 id = 1;
}

message QueryGetPoolResponse {
	Pool Pool = 1;
}

message QueryAllPoolRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllPoolResponse {
	repeated Pool Pool = 1;
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
