syntax = "proto3";
package sapienscosmos.ibb.ibb;

option go_package = "github.com/sapiens-cosmos/ibb/x/ibb/types";

import "gogoproto/gogo.proto";
import "ibb/user.proto";

message LoadPoolResponse {
  string Asset = 1;
  int32 CollatoralFactor = 2;
  int32 Liquidity = 3; 
  int32 DepositApy = 4; 
  int32 BorrowApy = 5; 
}

message LoadUserResponse {
  int32 AssetApy = 1;
	string AssetDenom = 2;
	int64 AssetBalance = 3;
	int32 AssetDeposit = 4;
	int32 AssetBorrow = 5;
	int32 AssetPrice = 6;
	bool Collateral =7;
}